--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <div id="header" class='mb20'>
         <ul class="header-left">
           <li>
-            <%= link_to("home","/") %>
+            <%= link_to("Home","/") %>
           </li>
         </ul>
         <ul class="header-right">
