fix for logged in styles

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -52,7 +52,7 @@
            }
 
            $enclosure.removeClass('success').removeClass('fail').addClass('success');
-           $container.text('Buy: ');
+//            $container.text('Buy: ');
 
            jQuery.each(response_data, function(index, r) {
              var $a = $('<a>');
