--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -42,8 +42,8 @@
          beatbox.search({ 'artist_name' : $('#search_artist_name').val(), 'album_name' : $('#search_album_name').val()}, function(response_data) {
            $enclosure = $('#results');
            $enclosure.show();
-console.log(response_data);
            $container = $('#body_of_results');
+           $container.text(''); 
 
            if (response_data.length == 0) {
            $enclosure.removeClass('success').removeClass('fail').addClass('fail');
