--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -234,5 +234,9 @@ table th {
   width: 100%;
 }
 #body_of_results a {
+display: block;
+text-decoration: none;
+font-size: 30px;
+margin-top: 20px;
   
 }
