--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="section">
-  <%= form.label :name, 'Name', :class => :label_tag %>
+  <%= form.label :name, 'Album Name', :class => :label_tag %>
   <%= form.text_field :name %>
 </div>
 
