--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -33,6 +33,9 @@
   <div class="section form_control">
     <%= submit_tag 'Submit', :class => 'rounded_corners mt20', :id => 'submit' %>
   </div>
+  <div id="spinner" style='display:none;'>
+    Loading ...
+  </div>
 <% end %>
 
 
@@ -40,18 +43,21 @@
      $(document).ready(function(){
        $('#submit').click(function(){
          beatbox.search({ 'artist_name' : $('#search_artist_name').val(), 'album_name' : $('#search_album_name').val()}, function(response_data) {
+           $('#spinner').show();
            $enclosure = $('#results');
            $enclosure.show();
            $container = $('#body_of_results');
            $container.text(''); 
 
            if (response_data.length == 0) {
+             $('spinner').hide(); 
              $enclosure.removeClass('success').removeClass('fail').addClass('fail');
              $container.text('Not available online.');
              return;
            }
 
            $enclosure.removeClass('success').removeClass('fail').addClass('success');
+           $('spinner').hide(); 
 
            jQuery.each(response_data, function(index, r) {
              var $a = $('<a>');
