--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -35,6 +35,7 @@
   </div>
   <div id="spinner" style='display:none;'>
     Loading ...
+    <%= image_tag 'ajax-loader.gif'  %>
   </div>
 <% end %>
 
