--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -34,7 +34,7 @@
     <%= submit_tag 'Submit', :class => 'rounded_corners mt20', :id => 'submit' %>
   </div>
   <div id="spinner" style='display:none;'>
-    <%= image_tag 'ajax-loader.gif'  %>
+    <%= image_tag 'ajax-loader.gif'  %> ............. loading
   </div>
 <% end %>
 
